Failed to fix horizontal scroll on mobile

--- a/styles/base/globals.scss
+++ b/styles/base/globals.scss
@@ -17,6 +17,8 @@ html {
 }
 
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
   overscroll-behavior-y: none;
   font-family: $font-primary;
   font-weight: 100;
