--- a/styles/layout/header.scss
+++ b/styles/layout/header.scss
@@ -2,7 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
+  max-width: 100vw;
   height: 7rem;
   display: flex;
   justify-content: space-between;
