--- a/styles/layout/layout.scss
+++ b/styles/layout/layout.scss
@@ -1,5 +1,5 @@
 .main__container {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
